# printerfacts

./: .envrc  Cargo.toml  README.md  default.nix  printerfacts.dhall  printerfacts.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: deploy.yml
nix/: deploy.sh  doctl.nix  kubectl.nix  rust.nix  shell.nix  sources.json
public/: .gitignore
src/: facts.rs  main.rs  printerfacts.json
templates/: footer.hbs  index.hbs  layout.hbs
templates/error/: 404.hbs
