[package]
name = "printerfacts"
version = "0.2.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
okapi = "0.4"
rand = "0"
rocket = "0.4.6"
rocket_okapi = "^0.5"
rocket_prometheus = "^0.6"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates"]
