[package]
name = "printerfacts"
version = "0.2.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfacts = "0"
rand = "0"
rocket = "0.5.0"
serde = { version = "^1", features = [ "derive" ] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "handlebars" ]
